--- a/notebooks/Blog.ipynb
+++ b/notebooks/Blog.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 130,
    "id": "7a1308e0",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,177 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(data=[{\"name\": \"Mark\", \"age\": 37}, {\"name\": \"David\", \"age\": 36}])\n",
+    "display(df)\n",
+    "df.to_csv(\"no_index.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "907d92cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mark</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>David</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age\n",
+       "0   Mark   37\n",
+       "1  David   36\n",
+       "0   Ryan   42\n",
+       "1   John   25"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_append = pd.DataFrame([\n",
+    "    {\"name\": \"Ryan\", \"age\": 42},\n",
+    "    {\"name\": \"John\", \"age\": 25}\n",
+    "])\n",
+    "append_df = df.append(to_append)\n",
+    "append_df.to_csv(\"no_index_append.csv\")\n",
+    "append_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "787f99cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mark</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>David</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>John</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age\n",
+       "0   Mark   37\n",
+       "1  David   36\n",
+       "2   Ryan   42\n",
+       "3   John   25"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[2] = [\"Ryan\", 42]\n",
+    "df.loc[3] = [\"John\", 25]\n",
+    "df.to_csv(\"no_index_individual.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "16f00d50",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -892,88 +1062,14 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame(data=[{\"name\": \"Mark\", \"age\": 37}, {\"name\": \"David\", \"age\": 36}])\n",
-    "display(df)\n",
-    "df.set_index(\"name\", inplace=True)\n",
-    "display(df)"
+    "df_with_index = df.set_index(\"name\")\n",
+    "display(df_with_index)\n",
+    "df_with_index.to_csv(\"index.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "787f99cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Mark</th>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>David</th>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ryan</th>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age\n",
-       "Mark    37\n",
-       "David   36\n",
-       "Ryan    40\n",
-       "0       42"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "to_append = pd.DataFrame([\n",
-    "    {\"age\": 42}\n",
-    "])\n",
-    "df.append(to_append)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 134,
    "id": "a86992bf",
    "metadata": {},
    "outputs": [
@@ -1000,6 +1096,10 @@
        "      <th></th>\n",
        "      <th>age</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -1011,8 +1111,12 @@
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>John</th>\n",
+       "      <th>Ryan</th>\n",
        "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>John</th>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1020,22 +1124,32 @@
       ],
       "text/plain": [
        "       age\n",
+       "name      \n",
        "Mark    37\n",
        "David   36\n",
-       "John    42"
+       "Ryan    42\n",
+       "John    25"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_append = pd.DataFrame([\n",
-    "    {\"age\": 42}\n",
-    "], index = [\"John\"])\n",
-    "df.append(to_append)"
+    "df_with_index.loc[\"Ryan\"] = [42]\n",
+    "df_with_index.loc[\"John\"] = [25]\n",
+    "df_with_index.to_csv(\"index_with_row.csv\")\n",
+    "df_with_index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5622eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
